[package]
name = "giga-chad"
version = "0.0.1"
edition = "2021"
authors = ["Braden Steffaniak"]
categories = ["web-programming"]
description = "giga-chad pakage"
keywords = ["giga-chad"]
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/BSteffaniak/giga-chad"

[dependencies]

[features]
default = []

fail-on-warnings = []
